k8s/gitops/20-network/base/25-monitoring/250-prometheus/egress/allow-prometheus-to-backend.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-to-backend
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: back
            app: backend
      toPorts:
        - ports:
            - port: "5001"
              protocol: TCP
