k8s/gitops/20-network/base/25-monitoring/250-prometheus/egress/allow-prometheus-to-frontend.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-to-frontend
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: front
            app: frontend
      toPorts:
        - ports:
            - port: "9113"
              protocol: TCP
