k8s/gitops/20-network/base/25-monitoring/250-prometheus/egress/allow-prometheus-to-kubeapi.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-to-kubeapi
  namespace: monitoring

spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: prometheus

  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
