k8s/gitops/20-network/base/25-monitoring/250-prometheus/egress/allow-prometheus-to-mongodb-exporter.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-to-mongodb-exporter
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: db
            app: mongodb-exporter
      toPorts:
        - ports:
            - port: "9216"
              protocol: TCP
