k8s/gitops/20-network/base/25-monitoring/250-prometheus/egress/allow-prometheus-to-operator.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-to-operator
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: prometheus-operator
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
